--- a/pom.xml
+++ b/pom.xml
@@ -1,50 +1,48 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.8.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>spring-boot-docker-app</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
-	<name>spring-boot-docker-app</name>
-	<description>Demo project for Spring Boot</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+        <modelVersion>4.0.0</modelVersion>
+        <groupId>in.javahome</groupId>
+        <artifactId>myweb</artifactId>
+        <packaging>war</packaging>
+        <version>8.2.0</version>
+        <name>Java Home myweb</name>
+        <url>http://maven.apache.org</url>
 
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+          <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+        <dependencies>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-	</dependencies>
 
-	<build>
-		<finalName>spring-boot-docker-app</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+                <dependency>
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
+                        <version>3.8.1</version>
+                        <scope>test</scope>
+                </dependency>
+
+        </dependencies>
+
+        <distributionManagement>
+                 <snapshotRepository>
+                    <id>nexusRepo</id>
+                    <url>http://18.183.142.110:8081/repository/sample-snapshots/</url>
+                 </snapshotRepository>
+
+                <repository>
+                    <id>nexusRepo</id>
+                    <url>http://18.183.142.110:8081/repository/sample-releases/</url>
+                </repository>
+        </distributionManagement>
+
+        <pluginRepositories>
+            <pluginRepository>
+                <id>maven1</id>
+                <name>Maven.org</name>
+                <url>http://repo1.maven.org/maven2</url>
+            </pluginRepository>
+        </pluginRepositories>
+
+
 </project>
